edited inputs with Font Awesome icons

--- a/crypfolio/web/faces/login.xhtml
+++ b/crypfolio/web/faces/login.xhtml
@@ -46,6 +46,8 @@
 
                         </p:outputPanel>
 
+                        <p:outputLabel style="height: 10px; display: block;"/>
+
                         <p:commandButton action="#{loginBacking.login}"
                                          style="margin-top: 10px;"
                                          value="Login"
