edited inputs with Font Awesome icons

--- a/crypfolio/web/faces/forgot-password.xhtml
+++ b/crypfolio/web/faces/forgot-password.xhtml
@@ -23,15 +23,23 @@
 
                 <p:panel id="resetPasswordPanel" header="Reset Password" style="">
 
-                    <h:panelGrid styleClass="order-table reservainfo">
+                    <h:panelGrid styleClass="order-table">
 
                         <p:outputLabel for="usEmail" value="Email:"/>
-                        <p:inputText id="usEmail" value="#{forgotPasswordBacking.user.email}"
-                                     required="true" type="email"
-                                     requiredMessage="Error: enter your email"/>
+
+                        <p:outputPanel class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+
+                            <p:inputText id="usEmail" value="#{forgotPasswordBacking.user.email}"
+                                         required="true" type="email" placeholder="Email"
+                                         styleClass="form-control noshadow"
+                                         requiredMessage="Error: enter your email"/>
+
+                        </p:outputPanel>
+
+                        <p:outputLabel style="height: 10px; display: block;"/>
 
                         <p:commandButton action="#{forgotPasswordBacking.sendRequestResetPassword}"
-                                         styleClass="login-submit navi padding-margin"
                                          value="Send"
                                          update="resetPasswordPanel growl">
 
@@ -48,23 +56,41 @@
 
                 <p:panel id="setNewPasswordPanel" header="Set New Password" style="">
 
-                    <h:panelGrid styleClass="order-table reservainfo">
+                    <h:panelGrid styleClass="order-table">
 
                         <p:outputLabel for="newPassword" value="New password:"/>
-                        <p:password id="newPassword" value="#{forgotPasswordBacking.password}"
-                                    required="true"
-                                    match="confirmNewPassword" feedback="true">
-                            <f:validateLength minimum="6"/>
-                        </p:password>
 
-                        <p:outputLabel for="confirmNewPassword" value="Repeated password:"/>
-                        <p:password id="confirmNewPassword" value="#{forgotPasswordBacking.password}"
-                                    required="true">
-                            <f:validateLength minimum="6"/>
-                        </p:password>
+                        <p:outputPanel class="input-group">
+
+                            <span class="input-group-addon"><i class="fa fa-key"></i></span>
+
+                            <p:password id="newPassword" value="#{forgotPasswordBacking.password}"
+                                        required="true" type="password" placeholder="Password"
+                                        requiredMessage="Error: enter new password"
+                                        match="confirmNewPassword" feedback="true"
+                                        styleClass="form-control noshadow">
+                                <f:validateLength minimum="6"/>
+                            </p:password>
+
+                        </p:outputPanel>
+
+                        <p:outputLabel for="confirmNewPassword" value="Repeat New Password:"/>
+
+                        <p:outputPanel class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-key"></i></span>
+
+                            <p:password id="confirmNewPassword" value="#{forgotPasswordBacking.password}"
+                                        required="true" placeholder="Repeat New Password"
+                                        requiredMessage="Error: repeat new password"
+                                        styleClass="form-control noshadow">
+                                <f:validateLength minimum="6"/>
+                            </p:password>
+
+                        </p:outputPanel>
+
+                        <p:outputLabel style="height: 10px; display: block;"/>
 
                         <p:commandButton action="#{forgotPasswordBacking.sendSaveNewPassword(code)}"
-                                         styleClass="login-submit navi padding-margin"
                                          value="Submit"
                                          update="setNewPasswordPanel growl">
 
