signup form disappeare && inform message show after submit the form (is used p:outputpanel like a updated wrapper for rendered/not rendered components)

--- a/crypfolio/web/faces/signup.xhtml
+++ b/crypfolio/web/faces/signup.xhtml
@@ -92,9 +92,11 @@
 
                     </h:form>
 
+                    <!-- information message showed ONLY after user have submitted sign up form-->
                     <h:outputText rendered="#{!signupBacking.showSignUpForm}"
                                   value="In order to complete your registration, please click the confirmation link
                                   in the email that we just have sent to you."/>
+
                 </p:panel>
 
             </p:outputPanel>
