--- a/crypfolio/web/faces/signup.xhtml
+++ b/crypfolio/web/faces/signup.xhtml
@@ -19,7 +19,7 @@
 
             <p:outputPanel id="signUpOutputPanel">
 
-                <p:panel header="Create an account" style="">
+                <p:panel header="Create an account">
 
                     <h:form id="signupForm" rendered="#{signupBacking.showSignUpForm}">
 
