button class .button-center is used

--- a/crypfolio/web/faces/forgot-password.xhtml
+++ b/crypfolio/web/faces/forgot-password.xhtml
@@ -41,6 +41,7 @@
 
                         <p:commandButton action="#{forgotPasswordBacking.sendRequestResetPassword}"
                                          value="Send"
+                                         styleClass="button-center"
                                          update="resetPasswordPanel growl">
 
                             <p:resetInput target="resetPasswordPanel"/>
@@ -92,6 +93,7 @@
 
                         <p:commandButton action="#{forgotPasswordBacking.sendSaveNewPassword(code)}"
                                          value="Submit"
+                                         styleClass="button-center"
                                          update="setNewPasswordPanel growl">
 
                         </p:commandButton>
