--- a/crypfolio/web/faces/login.xhtml
+++ b/crypfolio/web/faces/login.xhtml
@@ -51,6 +51,7 @@
 
                             <p:commandButton action="#{loginBacking.login}"
                                              value="Login"
+                                             styleClass="button-center"
                                              update="loginOutputPanel growl">
 
                                 <p:resetInput target="loginForm"/>
