--- a/crypfolio/web/faces/signup.xhtml
+++ b/crypfolio/web/faces/signup.xhtml
@@ -82,6 +82,7 @@
 
                             <p:commandButton action="#{signupBacking.signup}"
                                              value="Sign Up"
+                                             styleClass="button-center"
                                              update="signUpOutputPanel growl">
 
                                 <p:resetInput target="signupForm"/>
