Font Awesome changed to v5

--- a/crypfolio/web/faces/signup.xhtml
+++ b/crypfolio/web/faces/signup.xhtml
@@ -28,8 +28,8 @@
                             <p:outputLabel for="usPortfilioName" value="Portfilio Name:"/>
 
                             <p:outputPanel class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-tachometer"></i></span>
 
+                                <span class="input-group-addon"><i class="fas fa-tachometer-alt"></i></span>
                                 <p:inputText id="usPortfilioName" value="#{signupBacking.portfolio.name}"
                                              required="true" type="text" size="20" placeholder="Portfolio Name"
                                              requiredMessage="Error: enter portfolio name"
