--- a/crypfolio/web/faces/watchlist.xhtml
+++ b/crypfolio/web/faces/watchlist.xhtml
@@ -171,7 +171,7 @@
                     <p:outputPanel class="input-group" id="watch-add-coin-input-group">
 
                         <span class="input-group-addon" id="watch-add-coin-img">
-                            <i class="fa fa-btc" aria-hidden="true"></i>
+                            <i class="fab fa-btc" aria-hidden="true"></i>
                         </span>
 
                         <p:autoComplete id="watch-add-coin-name" value="#{watchlistBacking.coinTemp}"
