--- a/crypfolio/web/faces/forgot-password.xhtml
+++ b/crypfolio/web/faces/forgot-password.xhtml
@@ -18,8 +18,8 @@
 
             <p:growl id="growl" showDetail="false" life="15000" errorClass="error-messages" infoClass="info-messages"/>
 
-            <!-- the form for the use case when user is not logged and want to reset you password -->
             <h:form id="resetPasswordForm" rendered="#{empty param['code']}">
+                <!-- the form for the use case when user is not logged and want to reset you password -->
 
                 <p:panel id="resetPasswordPanel" header="Reset Password" style="">
 
@@ -52,8 +52,8 @@
                 </p:panel>
             </h:form>
 
-            <!-- the form for use case when user passed by reset.password link and will set a new password -->
             <h:form id="setNewPasswordForm" rendered="#{not empty param['code']}">
+                <!-- the form for use case when user passed by reset.password link and will set a new password -->
 
                 <p:panel id="setNewPasswordPanel" header="Set New Password" style="">
 
@@ -102,11 +102,10 @@
                 </p:panel>
             </h:form>
 
-            <h:outputText value="Do you remember you password?"/>
-
-            <p>
-                <h:link outcome="login" value="Login"/>
-            </p>
+            <h:panelGrid styleClass="added-links">
+                <h:outputText value="Remember your password?"/>
+                <h:link outcome="login" styleClass="upp-case" value="Login"/>
+            </h:panelGrid>
 
         </div>
 
