.button-center to resend email button added

--- a/crypfolio/web/faces/login.xhtml
+++ b/crypfolio/web/faces/login.xhtml
@@ -73,6 +73,7 @@
                                           style="text-align: center; display: block; font-size: 0.9em;"/>
 
                             <p:commandButton value="Resend email"
+                                             styleClass="button-center"
                                              update="loginOutputPanel"
                                              onclick="myCommand();">
 
